add show page and styles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
                     <h3><%=item.name%></h3>
                     <p><%=item.category%></p>
                     <p>Zip: <%=item.location.zip%></p>
+                    <a href="/items/<%=item._id%>">See Details</a>
                 </div>
             </div>
             <% } %>
