--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
 <body>
     <main class="index">
         <h1>Curbside Items</h1>
+        <a class="new-link" href="/items/new">Create a New Curbside Item to Donate!</a>
         <% for (item of items) { %> 
             <div class="curbsideItem">
                 <div class="itemImage">
