--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -31,11 +31,15 @@ body {
 }
 
 .itemImage {
-    width: 40%;
+    width: 50%;
+    height: auto;
 }
 
 .itemImage img { 
     max-width: 100%;
+    min-width: 150px;
+    min-height: 100%;
+
 }
 
 .itemDetails {
@@ -45,4 +49,10 @@ body {
 
 .itemDetails * {
     margin: 0.5rem;
+}
+
+.new-link {
+    align-self: flex-start;
+    margin-left: 5rem;
+    margin-bottom: 2rem;
 }
