--- a/views/error.ejs
+++ b/views/error.ejs
@@ -12,7 +12,7 @@
     <main>
         <div class="error">
             <h1>Error! <%=err.message%></h1>
-            <!-- <p><%=err.stack%></p> -->
+            <p><%=err.stack%></p>
             <p>Something Went Horribly Wrong!</p>
         </div>
     </main>
