--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,6 +1,13 @@
 <% if (success && success.length) { %>
     <div class="flash-success">
          <p><%=success%></p>
-         <button>&times;</button>
+         <button id="flash-btn">&times;</button>
     </div>
+    <script>
+        const flashBtn = document.querySelector('#flash-btn');
+        const flashDiv = document.querySelector('.flash-success');
+        flashBtn.addEventListener('click', () => {
+            flashDiv.classList.add('flash-hidden')
+        })
+    </script>
 <% } %>
