pre passport auth

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curbside Items</title>
     <link rel="stylesheet" href="/styles/index.css">
-</head>
+</head> -->
 
-<body>
+<!-- <body> -->
+<% layout('layouts/boilerplate') %>
     <main class="index">
         <h1>Curbside Items</h1>
+        <%- include('partials/flash') %>
         <a class="new-link" href="/items/new">Create a New Curbside Item to Donate!</a>
         <% for (item of items) { %> 
             <div class="curbsideItem">
@@ -27,6 +29,6 @@
             </div>
             <% } %>
     </main>
-</body>
+<!-- </body> -->
 
-</html>
+<!-- </html> -->
