--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -4,13 +4,8 @@
     box-sizing: border-box;
 }
 
-body {
-    width: 100vw;
-    height: 100vh;
-    overflow-x: hidden;
-}
-
 .index {
+    margin-top: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
