--- a/public/styles/show.css
+++ b/public/styles/show.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 
-body {
+.show-main {
+    margin-top: 4rem;
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -99,25 +100,4 @@ body {
 
 .comment p {
     margin-bottom: 2rem;
-}
-
-.flash-success {
-    margin-top: 2rem;
-    width: 80%;
-    padding: 1.5rem;
-    margin: 0 auto;
-    background-color: #a6dfa6;
-    position: relative;
-}
-
-.flash-success button {
-    padding: 0 0.25rem;
-    font-size: 1rem;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-.flash-hidden {
-    display: none;
 }
