--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/styles/new.css">
     <title>Edit</title>
 </head>
-<body>
+<body> -->
+    <% layout('layouts/boilerplate') %>
     <main class="new-main">
         <h1>Edit your Curbside Item</h1>
         <form action="/items/<%=curbsideItem._id%>?_method=PUT" method="POST" class="item-form">
@@ -49,5 +50,5 @@
             <button>Update</button>
         </form>
     </main>
-</body>
-</html>
+<!-- </body>
+</html> -->
