--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/styles/new.css">
     <title>New</title>
 </head>
-<body>
+<body> -->
+    <% layout('layouts/boilerplate') %>
     <main class="new-main">
         <h1>Create a new Curbside Item</h1>
         <a class="index-link" href="/items">Back to Index</a>
@@ -50,5 +51,5 @@
             <button>Submit</button>
         </form>
     </main>
-</body>
-</html>
+<!-- </body>
+</html> -->
