add basic authentication

--- a/public/styles/error.css
+++ b/public/styles/error.css
@@ -10,7 +10,7 @@ body {
     overflow-x: hidden;
 }
 
-main { 
+.error-main { 
     display: flex;
     align-items: center;
     justify-content: center;
