--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
         <% for (item of items) { %> 
             <div class="curbsideItem">
                 <div class="itemImage">
-                    <img src="<%=item.image%>" alt="">
+                    <img src="<%=item.images[0].url%>" alt="">
                 </div>
                 <div class="itemDetails">
                     <h3><%=item.name%></h3>
