--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -111,10 +111,9 @@ body {
 }
 
 .flash-error {
-    margin-top: 2rem;
     width: 80%;
     padding: 1.5rem;
-    margin: 0 auto;
+    margin: 5rem auto 0 auto;
     background-color: #dfa6a6;
     position: relative;
 }
@@ -241,6 +240,32 @@ body {
     margin-left: 3rem;
 }
 
+.images-to-edit {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+.thumb-nail {
+    width: 150px;
+    height: 100px;
+}
+
+.thumb-nail-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#thumbnail-label {
+    display: inline;
+} 
+
+.images-to-edit input {
+    width: 5%;
+}
+
+
 /* show css */
 .show-main {
     margin-top: 4rem;
@@ -266,12 +291,48 @@ body {
     margin-left: 5%;
 }
 
+.card-image-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slider {
+    width: 100%;
+    max-width: 800px;
+    height: 350px;
+    position: relative;
+    overflow: hidden;
+}
+
 .card-image {
     width: 100%;
+    max-width: 800px;
+    height: 350px;
+    position: absolute;
+    transition: all 0.5s;
+
 }
 
 .card-image img {
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slider-btn {
+    position: absolute;
+    z-index: 10;
+}
+
+.prev-btn {
+    top: 45%;
+    left: 2%;
+}
+
+.next-btn {
+    top: 45%;
+    right: 2%;
 }
 
 .card-details {
@@ -334,6 +395,12 @@ body {
     margin: 0 auto;
     margin-top: 2rem;
     padding: 1rem;
+}
+
+.comment-username {
+    font-size: 1.25rem;
+    text-decoration: underline;
+    margin-bottom: 1rem;
 }
 
 .comment p {
