--- a/views/error.ejs
+++ b/views/error.ejs
@@ -13,7 +13,7 @@
     <main class="error-main">
         <div class="error">
             <h1>Error! <%=err.message%></h1>
-            <p><%=err.stack%></p>
+            <!-- <p><%=err.stack%></p> -->
             <p>Something Went Horribly Wrong!</p>
         </div>
     </main>
